# eems

./: .clang-format  .gitignore  CMakeLists.txt  README.rst  conanfile.py
conan/: dev  opt
config/: eems.service
src/: CMakeLists.txt  as_result.h  cds.xml  cm.xml  config.cpp  config.h  content_service.cpp  content_service.h  data_config.h  directory_service.cpp  directory_service.h  discovery_service.cpp  discovery_service.h  fs.h  http_messages.cpp  http_messages.h  http_serialize.h  logging.cpp  logging.h  logging_config.h  main.cpp  net.h  ranges.h  scan_service.cpp  scan_service.h  server.cpp  server.h  server_config.h  soap.cpp  soap.h  spirit.h  store_config.h  upnp.cpp  upnp.h  xml_serialization.cpp  xml_serialization.h
src/asio/: CMakeLists.txt  asio.cpp
src/scanner/: CMakeLists.txt  movie_scanner.cpp  movie_scanner.h
src/store/: CMakeLists.txt  fb_converters.h  fb_vector_view.h  schema.fbs  store_service.cpp  store_service.h
